manifests/sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
  labels:
    app: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
